# LearnOpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/learnopengl/: shader_s.h
src/: glad.c  stb_image.cpp
src/01_Getting_Started/05_01_hello_triangle_exercise1/: hello_triangle_exercise1.cpp
src/01_Getting_Started/05_02_hello_triangle_exercise2/: hello_triangle_exercise2.cpp
src/01_Getting_Started/05_03_hello_triangle_exercise3/: hello_triangle_exercise3.cpp
src/01_Getting_Started/06_01_shaders_interpolation/: shaders_interpolation.cpp
src/01_Getting_Started/06_02_shaders_class/: shaders_class.cpp
src/01_Getting_Started/06_03_shaders_exercise2/: 06_03_shaders_exercise2.cpp
src/01_Getting_Started/06_03_shaders_exercise3/: shader.frag  shader.vert
src/01_Getting_Started/07_01_textures/: 07_01_textures.cpp
